@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-09T01:19:40Z",
+  "timestamp" : "2024-12-12T01:17:16Z",
   "count_outdated" : 2890,
   "uniques_outdated" : 927,
-  "count" : 2897,
-  "uniques" : 930,
+  "count" : 2898,
+  "uniques" : 931,
   "views" : [
     {
       "timestamp": "2024-11-28T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
