@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 8,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2024-11-28T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2024-12-07T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-11T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
